<resources>
    <string name="app_name">GestureCut</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="add_gesture">Add gesture</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="your_gesture_list">Your gestures</string>
    <string name="add_gesture_draw">New gesture</string>

    <string name="notification_title">Gesturecut</string>
    <string name="notification_content">Press to edit defined gestures</string>

    <!-- text in background for recording a new gesture -->
    <string name="gesture_bg_title_record">Draw new gesture here</string>
    <!-- text in background for starting activity from a gesture -->
    <string name="gesture_bg_title_use">Draw gesture here</string>

    <string name="saving_gesture_completed">Gesture %s saved</string>
    <string name="start_activity_from_gesture">Starting activity from gesture&#8230;</string>
    <string name="start_activity_failed">Sorry, unable to start your task</string>
    <string name="no_gesture_match">No gesture match</string>

    <string name="gesture_list_title">Your gestures</string>
    <string name="gesture_list_no_defined">You do not have any gesture defined yet. Add gestures first.</string>

    <string name="float_window_2nd_tab_add">Add gesture</string>
    <string name="float_window_2nd_tab_use">Use gesture</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="get_it">OK, get it</string>

    <string name="appinfo_app_detail_clz">Class: \u0020</string>
    <string name="appinfo_app_detail_pkg">Package: \u0020</string>

    <!-- filters of adding gestures -->
    <string name="target_component_invalid">This target may be invalid, not suggest to add！</string>

    <string name="add_gesture_confirm_title">Add new gesture</string>
    <string name="add_gesture_confirm_content">Are you sure to add this new gesture into your gesture store?</string>

    <!-- warning dialog of highly duplicated gesture trying to be added -->
    <string name="add_gesture_alert_duplicate">Duplicated gesture</string>
    <string name="add_gesture_alert_duplicate_content">The new gesture is of high similarity with an exsiting gesture.</string>

    <!-- FwDialogView sub-titles for imageview -->
    <string name="add_gesture_subtitle_new_gesture">New gesture</string>
    <string name="add_gesture_subtitle_target_task">Target task</string>
    <string name="add_gesture_subtitle_similar_gesture">Existing gesture</string>

    <string name="add_ges_tab_sys_app">System</string>
    <string name="add_ges_tab_usr_app">Downloaded</string>

    <!-- settings -->
    <string name="setting_categroy_basic">Basic</string>
    <string name="setting_category_more">More</string>

    <string name="setting_vibrate">Vibration</string>
    <string name="setting_vibrate_on">Vibrate when task is being launched</string>
    <string name="setting_vibrate_off">Not vibrate when task is being launched</string>

    <string name="setting_float_wnd">Float window</string>
    <string name="setting_float_wnd_on">Show float window</string>
    <string name="setting_float_wnd_off">Float window turned off</string>

    <string name="setting_rate_title">Rate me</string>
    <string name="setting_rate_summary">Help this app to be better</string>
    <string name="setting_about_title">About</string>

    <!-- mask layer on lock screen -->
    <string name="lock_screen_mask_layer_msg_on_listview_item">Double click to start the app</string>
    <string name="lock_screen_mask_layer_msg_on_gestureoverlay">To draw a gesture, continue moving your finger</string>

    <string name="del_gesture_confirm_title">Removal</string>
    <string name="del_gesture_confirm_content">Delete the %d gesture(s)?</string>

    <string name="about_intro_app">Convenient task switching with gestures~</string>

    <string name="main_gesture_list_empty_msg">Press me\nto add a gesture</string>

    <string name="float_gesture_list_empty_msg">No gesture defined yet</string>

    <string name="search_add_ges_hint">Search apps</string>

    <!-- AddGestureDrawActivity -->
    <string name="new_gesture_no_rc">Unable to locate the target app</string>

    <string name="about_dev">Develop: Liu,Xin</string>
    <string name="about_ued">UED support: 小渣渣</string>
</resources>
