<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/head" />

    <TextView
        android:id="@+id/about_content_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_title_margin_big"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_general"
        android:textSize="@dimen/text_size_small_title"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_title_margin_small"
        android:gravity="center"
        android:text="http://vliux.me"
        android:autoLink="web"
        android:textColor="@color/text_general"
        android:textSize="@dimen/text_size_general" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_title_margin_small"
        android:gravity="center"
        android:text="@string/about_dev"
        android:textColor="@color/text_general"
        android:textSize="@dimen/text_size_general" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/about_ued"
        android:textColor="@color/text_general"
        android:textSize="@dimen/text_size_general" />
</LinearLayout>